--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="scripts/directives/getHtml.js"></script>
+        <script src="scripts/directives/metaField.js"></script>
         <script src="scripts/directives/getTemplate.js"></script>
         <!-- endbuild -->
 
