--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
         <!-- build:css({.tmp,app}) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="styles/blue.css">
+        <link rel="stylesheet" href="styles/widget.css">
         <!-- endbuild -->
 </head>
   <body ng-app="cloudifyWidgetSkinsApp">
