Skin portal development

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
         <!-- build:css({.tmp,app}) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/widget.css">
+        <link rel="stylesheet" href="styles/portal.css">
         <!-- endbuild -->
 </head>
   <body ng-app="cloudifyWidgetSkinsApp">
@@ -42,6 +43,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/portal.js"></script>
     <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
@@ -68,6 +70,7 @@
         <script src="scripts/directives/getHtml.js"></script>
         <script src="scripts/directives/metaField.js"></script>
         <script src="scripts/directives/getTemplate.js"></script>
+        <script src="scripts/services/skinService.js"></script>
         <!-- endbuild -->
 
 </body>
