Skin portal development

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
         <script src="scripts/directives/metaField.js"></script>
         <script src="scripts/directives/getTemplate.js"></script>
         <script src="scripts/services/skinService.js"></script>
+        <script src="scripts/services/mockData.js"></script>
         <!-- endbuild -->
 
 </body>
