--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
         <script src="scripts/directives/getTemplate.js"></script>
         <script src="scripts/services/skinService.js"></script>
         <script src="scripts/services/mockData.js"></script>
+        <script src="scripts/directives/getConfiguration.js"></script>
         <!-- endbuild -->
 
 </body>
